--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-MONGO_CONNECTION_STRING="mongodb+srv://<username>:<password>@<cluster-name>.mongodb.net/<database-name>?retryWrites=true&w=majority"
-MONGO_DB_NAME="mydatabase" # Replace with your desired database name
+MONGO_CONNECTION_STRING="mongodb+srv://medic-db-admin:medic-db-admin@cluster0.pz1ji.mongodb.net/medic_db?retryWrites=true&w=majority"
+MONGO_DB_NAME="medic_db" # Replace with your desired database name
